base/2025-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hofu-2025
spec:
  selector:
    matchLabels:
      app: hofu-2025
  template:
    metadata:
      labels:
        app: hofu-2025
    spec:
      containers:
        - name: app
          image: registry.uniproject.jp/official/hofu-2025:1.3.5
          ports:
            - containerPort: 3000
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "128Mi"
              cpu: "250m"
      imagePullSecrets:
        - name: internal-harbor
