base/2025-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hofu-2025
spec:
  selector:
    app: hofu-2025
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
