base/front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hofu-2026
  labels:
    app: hofu-2026
spec:
  selector:
    matchLabels:
      app: hofu-2026
  template:
    metadata:
      labels:
        app: hofu-2026
    spec:
      containers:
        - name: hofu-2026
          image: registry.uniproject.jp/official/hofu-2026:1.0.0-1
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "250m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
      imagePullSecrets:
        - name: internal-harbor
---
apiVersion: v1
kind: Service
metadata:
  name: hofu-2026
  labels:
    app: hofu-2026
spec:
  selector:
    app: hofu-2026
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
