base/adminer.yaml
#adminiser
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adminer
  labels:
    app: adminer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adminer
  template:
    metadata:
      labels:
        app: adminer
    spec:
      containers:
        - name: adminer
          image: adminer:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: adminer
  labels:
    app: adminer
spec:
  selector:
    app: adminer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: adminer-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`adminer.hofu.uniproject.jp`)
      observability:
        accessLogs: true
        metrics: true
        tracing: true
      services:
        - kind: Service
          name: adminer
          passHostHeader: true
          port: 80
          responseForwarding:
            flushInterval: 1ms
          scheme: http
          sticky:
            cookie:
              httpOnly: true
              name: cookie
              secure: true
          strategy: wrr
          weight: 10
  tls:
    certResolver: cf-prod
    domains:
      - main: adminer.uniproject.jp
