base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hofu-route
spec:
  parentRefs:
    - name: uniproject-jp-gateway
      namespace: infra-gateway
      sectionName: https-wildcard
  hostnames:
    - "hofu.uniproject.jp"
  rules:
    # --- 1. /2025 パス ---
    - matches:
        - path:
            type: PathPrefix
            value: /2025
      backendRefs:
        - name: hofu-2025
          port: 80
      sessionPersistence:
        sessionName: cookie
        type: Cookie
    # --- 2. ルートパス ---
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: hofu-2026
          port: 80
      sessionPersistence:
        sessionName: cookie
        type: Cookie
