base/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hofu-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`hofu.uniproject.jp`) && PathPrefix(`/2025`)
      observability:
        accessLogs: true
        metrics: true
        tracing: true
      priority: 20
      services:
        - kind: Service
          name: hofu-2025
          passHostHeader: true
          port: 80
          responseForwarding:
            flushInterval: 1ms
          scheme: http
          sticky:
            cookie:
              httpOnly: true
              name: cookie
              secure: true
          strategy: wrr
          weight: 10
    - kind: Rule
      match: Host(`hofu.uniproject.jp`) && PathPrefix(`/`)
      observability:
        accessLogs: true
        metrics: true
        tracing: true
      priority: 10
      services:
        - kind: Service
          name: hofu-2026
          passHostHeader: true
          port: 80
          responseForwarding:
            flushInterval: 1ms
          scheme: http
          sticky:
            cookie:
              httpOnly: true
              name: cookie
              secure: true
          strategy: wrr
          weight: 10
  tls:
    certResolver: cf-prod
    domains:
      - main: hofu.uniproject.jp
